Fixed chart component overflow

--- a/src/app/recipes/recipe-animator/recipe-animator.component.css
+++ b/src/app/recipes/recipe-animator/recipe-animator.component.css
@@ -15,6 +15,17 @@
     background:url('/assets/images/grid.gif');
 }
 
+:host ::ng-deep .graph-container > div {
+    height: 100%;
+    width: 100%;
+    min-height: 0;
+}
+
+:host ::ng-deep .graph-container > div > svg {
+    min-width: unset !important;
+    min-height: unset !important;
+}
+
 div.info {
     margin: 3px;
 }
