--- a/src/app/recipes/recipe-entries/recipe-entries.component.css
+++ b/src/app/recipes/recipe-entries/recipe-entries.component.css
@@ -25,6 +25,7 @@
 .json-editor-wrapper {
     flex: 1;
     margin: 5px;
+    min-height: 0;
 }
 
 .json-editor {
@@ -61,9 +62,10 @@ tr.selected {
 :host ::ng-deep .graph-viewer > div {
     height: 100%;
     width: 100%;
+    min-height: 0;
 }
 
 :host ::ng-deep .graph-viewer > div > svg {
-    min-width: unset;
-    max-width: unset;
+    min-width: unset !important;
+    min-height: unset !important;
 }
